--- a/src/Resources/public/scss/contao-subcolumns-bootstrap-bundle.be.scss
+++ b/src/Resources/public/scss/contao-subcolumns-bootstrap-bundle.be.scss
@@ -3,7 +3,7 @@
 .tl_content {
   &.wrapper_start, &.wrapper_separator, &.wrapper_stop {
     h1 {
-      display: none;
+      margin: 0 0 9px 6px;
     }
 
     .colsetexample {
