--- a/src/Resources/public/scss/contao-subcolumns-bootstrap-bundle.be.scss
+++ b/src/Resources/public/scss/contao-subcolumns-bootstrap-bundle.be.scss
@@ -54,9 +54,11 @@
     display: none;
   }
 
-  &.wrapper_separator .tl_content_right {
-    .edit, .editDraft, .copy, .cut {
-      display: none;
+  &.wrapper_separator, &.wrapper_stop {
+    .tl_content_right {
+      .edit, .editDraft, .copy, .cut {
+        display: none;
+      }
     }
   }
 }
